# reinforce-spec

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  mkdocs.yml  mlflow.db  openapi.yml  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yml  deploy-api.yml  docs.yml  integration.yml  nightly.yml  release.yml  sdk-publish.yml  sdk-tests.yml
data/: reinforce_spec.db
data/policies/: production  registry.json
data/policies/v001/: metadata.json
docs/: index.md  requirements.txt  versions.json
docs/api-reference/: errors.md  feedback.md  health.md  index.md  policy.md  specs.md
docs/concepts/: idempotency.md  index.md  multi-judge.md  scoring-dimensions.md  selection-methods.md
docs/getting-started/: authentication.md  index.md  installation.md  quickstart.md
docs/guides/: best-practices.md  error-handling.md  feedback-loop.md  index.md  observability.md  scoring-specs.md
docs/javascripts/: extra.js
docs/resources/: changelog.md  faq.md  glossary.md  index.md  rate-limits.md
docs/sdks/: go.md  http.md  index.md  python.md  typescript.md
docs/stylesheets/: extra.css
examples/: api_client.py  basic_selection.py  scoring_only.py
infra/: prometheus.yml
infra/aws/codeartifact/: README.md  template.yaml
infra/aws/docs/: DEPLOYMENT_CHECKLIST.md  FARGATE_ASSESSMENT.md
infra/aws/ecs-fargate/: README.md  deploy-role.yaml  stack.yaml
reinforce_spec/: __init__.py  _compat.py  _exceptions.py  client.py  types.py  version.py
reinforce_spec/_internal/: __init__.py  _bias.py  _calibration.py  _client.py  _config.py  _drift.py  _environment.py  _idempotency.py  _logging.py  _metrics.py  _ope.py  _persistence.py  _policy.py  _queue.py  _replay_buffer.py  _rubric.py  _scorer.py  _selector.py  _utils.py
reinforce_spec/observability/: __init__.py  audit.py  experiment.py  metrics.py
reinforce_spec/rl/: __init__.py  environment.py  evaluation.py  registry.py  selector.py  trainer.py
reinforce_spec/scoring/: __init__.py  calibration.py  judge.py  presets.py  rubric.py
reinforce_spec/server/: __init__.py  __main__.py  app.py  dependencies.py  openapi.py  schemas.py
reinforce_spec/server/middleware/: __init__.py  auth.py  backpressure.py  idempotency.py  logging.py  rate_limit.py  security.py
reinforce_spec/server/routes/: __init__.py  health.py  jobs.py  policy.py  specs.py
scripts/: build_replay_buffer.py  check_docker_e2e.py  docker_entrypoint.sh  format.sh  lint.sh  migrate_sqlite_to_postgres.py  run_migration.py  seed_calibration_set.py  test.sh  test_go_sdk_e2e.go  test_nightly.sh  test_sdk_e2e.py  test_ts_sdk_e2e.ts
scripts/aws/: check_errors.py  check_logs.py  check_stack.py  codeartifact_login_npm.sh  codeartifact_login_pip.sh  deploy_ecs_fargate.sh  deploy_with_rds.ps1  publish_sdk.sh  test_api_e2e.py  test_endpoints.ps1  test_production.ps1
sdks/: CONTRIBUTING.md  README.md
sdks/go/: .gitignore  .golangci.yml  CHANGELOG.md  Makefile  README.md  client.go  client_test.go  doc.go  errors.go  errors_test.go  example_test.go  go.mod  option.go  option_test.go  selector.go  types.go  types_test.go  types_wire.go  version.go  wire_test.go
sdks/go/examples/basic/: main.go
sdks/go/examples/feedback/: main.go
sdks/go/examples/hooks/: main.go
sdks/go/internal/transport/: transport.go  transport_test.go
sdks/go/reinforcespectest/: doc.go  factory.go  mock.go  mock_test.go
sdks/python/: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml
sdks/python/examples/: basic_selection.py  hooks_logging.py  sync_usage.py
sdks/python/src/reinforce_spec_sdk/: __init__.py  _http.py  client.py  exceptions.py  testing.py  types.py
sdks/python/tests/: conftest.py  test_client.py  test_exceptions.py  test_testing.py  test_types.py
sdks/typescript/: .eslintrc.json  .gitignore  .npmignore  CHANGELOG.md  Makefile  README.md  jest.config.ts  package-lock.json  package.json  tsconfig.cjs.json  tsconfig.esm.json  tsconfig.json  tsconfig.types.json
sdks/typescript/examples/: basic-selection.ts  error-handling.ts  tsconfig.json
sdks/typescript/src/: client.ts  errors.ts  http.ts  index.ts  testing.ts  types.ts  version.ts
sdks/typescript/tests/: client.test.ts  errors.test.ts  testing.test.ts  types.test.ts
tests/: conftest.py
tests/behavioral/: test_drift_invariants.py  test_scoring_invariants.py
tests/fixtures/: calibration_anchors.json  sample_specs.json  scoring_weights.json
tests/integration/: test_api_endpoints.py  test_persistence.py
tests/property/: test_invariants.py
tests/statistical/: test_distributions.py
tests/unit/: test_audit.py  test_bias.py  test_calibration.py  test_circuit_breaker.py  test_client_orchestrator.py  test_compat.py  test_config.py  test_coverage_gaps.py  test_drift.py  test_environment.py  test_exceptions.py  test_final_gaps.py  test_idempotency.py  test_logging_config.py  test_metrics.py  test_metrics_enabled.py  test_middleware.py  test_ope.py  test_persistence_extended.py  test_policy.py  test_policy_lifecycle.py  test_presets.py  test_queue.py  test_replay_buffer.py  test_rl_facades.py  test_rubric.py  test_schemas.py  test_scorer.py  test_security_middleware.py  test_selector.py  test_server_openapi_main.py  test_trainer_run.py  test_utils.py  test_version.py
