[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "reinforce-spec"
dynamic = ["version"]
description = "RL-optimized enterprise spec evaluation and selection SDK"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
authors = [{ name = "Axior" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "openai>=1.50.0",
    "httpx>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "uvloop>=0.19.0; sys_platform != 'win32'",
    "stable-baselines3>=2.3.0",
    "gym>=0.26.0",
    "torch>=2.2.0",
    "numpy>=1.26.0",
    "loguru>=0.7.0",
    "tenacity>=8.2.0",
    "asyncpg>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "python-dotenv>=1.0.1",
    "alembic>=1.13.0",
    "slowapi>=0.1.9",
    "python-ulid>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "pyright>=1.1.370",
    "pre-commit>=3.7.0",
    "ipython>=8.0.0",
]
test = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "pytest-xdist>=3.5.0",
    "flaky>=3.8.0",
    "hypothesis>=6.100.0",
    "schemathesis>=3.30.0",
    "respx>=0.21.0",
    "factory-boy>=3.3.0",
    "freezegun>=1.4.0",
]
docs = [
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.25.0",
]
observability = [
    "prometheus-client>=0.20.0",
    "prometheus-fastapi-instrumentator>=7.0.0",
    "mlflow>=2.14.0",
]
redis = [
    "redis[hiredis]>=5.0.0",
]
all = [
    "reinforce-spec[dev,test,docs,observability,redis]",
]

[project.scripts]
reinforce-spec-server = "reinforce_spec.server.__main__:main"

[project.urls]
Homepage = "https://github.com/axior/reinforce-spec"
Documentation = "https://axior.github.io/reinforce-spec"
Repository = "https://github.com/axior/reinforce-spec"
Issues = "https://github.com/axior/reinforce-spec/issues"
Changelog = "https://github.com/axior/reinforce-spec/blob/main/CHANGELOG.md"

[tool.hatch.version]
path = "reinforce_spec/version.py"

[tool.hatch.build.targets.wheel]
packages = ["reinforce_spec"]

# ── Ruff ──────────────────────────────────────────────────────────────────────

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["reinforce_spec", "tests"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "SIM",   # flake8-simplify
    "T20",   # flake8-print
    "RUF",   # ruff-specific
    "TCH",   # flake8-type-checking
    "PTH",   # flake8-use-pathlib
    "ERA",   # eradicate (dead code)
    "TID",   # flake8-tidy-imports
    "PIE",   # flake8-pie
    "RET",   # flake8-return
    "ANN",   # flake8-annotations
    "ASYNC", # flake8-async
]
ignore = [
    "ANN101",  # missing type self
    "ANN102",  # missing type cls
    "ANN401",  # dynamically typed Any
    "B008",    # function call in default argument (FastAPI Depends)
    "RET504",  # unnecessary variable assignment before return
    "E501",    # line length (legacy text-heavy docs/rubrics)
    "RUF002",  # ambiguous unicode in docs/text
    "RUF003",  # ambiguous unicode in comments
    "B905",    # strict zip requirement (legacy loops)
    "PTH123",  # prefer Path.open over open
    "RUF012",  # mutable class attributes typing
    "E402",    # import order in legacy modules
    "ERA001",  # commented code in legacy modules
    "SIM102",  # nested if simplification
]

[tool.ruff.lint.isort]
known-first-party = ["reinforce_spec"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ANN", "T20", "N803", "N806", "SIM117"]

# ── Mypy ──────────────────────────────────────────────────────────────────────

[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = false
show_error_codes = true
namespace_packages = true
explicit_package_bases = true
ignore_missing_imports = true
disable_error_code = [
    "import-not-found",
    "import-untyped",
]

[[tool.mypy.overrides]]
module = [
    "gym.*",
    "stable_baselines3.*",
    "sentence_transformers.*",
    "mlflow.*",
    "slowapi.*",
    "prometheus_client.*",
    "prometheus_fastapi_instrumentator.*",
    "alembic.*",
]
ignore_missing_imports = true

# Gradual strictness for legacy modules
[[tool.mypy.overrides]]
module = [
    "reinforce_spec.rl.*",
    "reinforce_spec.scoring.*",
]
disallow_untyped_defs = false
disallow_incomplete_defs = false

# ── Pytest ────────────────────────────────────────────────────────────────────

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "unit: unit tests (no network, no external deps)",
    "integration: integration tests (mocked external services)",
    "behavioral: CheckList-style behavioral tests",
    "statistical: stochastic tests for nightly CI",
    "property: hypothesis property-based tests",
    "slow: tests that take > 10s",
]
filterwarnings = [
    "ignore::DeprecationWarning:gym.*",
]
addopts = [
    "--strict-markers",
    "--tb=short",
    "-q",
]

# ── Coverage ──────────────────────────────────────────────────────────────────

[tool.coverage.run]
source = ["reinforce_spec"]
branch = true
omit = [
    "reinforce_spec/server/app.py",
    "reinforce_spec/observability/experiment.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "@overload",
    "raise NotImplementedError",
]
show_missing = true
fail_under = 80
